coreccion de errores y funcionabilidad

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Prueba
+application.title=PFC_Alejandro_Leon
 application.vendor=Usuario
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,13 +29,13 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Prueba.jar
+dist.jar=${dist.dir}/PFC_Alejandro_Leon.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Prueba
+dist.jlink.output=${dist.jlink.dir}/PFC_Alejandro_Leon
 endorsed.classpath=
 excludes=
-file.reference.hsqldb.jar=C:\\Users\\Usuario\\Downloads\\Proyecto2\\src\\biblioteca\\hsqldb.jar
+file.reference.hsqldb.jar=../../../Downloads/Proyecto2/src/biblioteca/hsqldb.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Prueba
+jlink.launcher.name=PFC_Alejandro_Leon
 main.class=prueba.Prueba
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
