coreccion de errores y funcionabilidad

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/PFC_Alejandro_Leon
 endorsed.classpath=
 excludes=
 file.reference.hsqldb.jar=../../../Downloads/Proyecto2/src/biblioteca/hsqldb.jar
+file.reference.jhall.jar=C:\\Users\\Usuario\\Downloads\\Proyecto2\\src\\biblioteca\\jhall.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.hsqldb.jar}
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.jhall.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
