--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,105 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PFC_Alejandro_Leon
 endorsed.classpath=
 excludes=
+file.reference.ant-1.7.1.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\ant-1.7.1.jar
+file.reference.ant-launcher-1.7.1.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\ant-launcher-1.7.1.jar
+file.reference.asm-5.0.2.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\asm-5.0.2.jar
+file.reference.asm-analysis-5.0.2.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\asm-analysis-5.0.2.jar
+file.reference.asm-commons-5.0.2.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\asm-commons-5.0.2.jar
+file.reference.asm-tree-5.0.2.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\asm-tree-5.0.2.jar
+file.reference.asm-util-5.0.2.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\asm-util-5.0.2.jar
+file.reference.com.lowagie.text-2.1.7.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\com.lowagie.text-2.1.7.jar
+file.reference.commons-beanutils-1.9.4.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\commons-beanutils-1.9.4.jar
+file.reference.commons-codec-1.16.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\commons-codec-1.16.0.jar
+file.reference.commons-collections4-4.4.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\commons-collections4-4.4.jar
+file.reference.commons-collections4-4.4.jar-1=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.25.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\commons-compress-1.25.0.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\commons-digester-2.1.jar
+file.reference.commons-io-2.15.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\commons-io-2.15.0.jar
+file.reference.commons-io-2.15.1.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\commons-io-2.15.1.jar
+file.reference.commons-javaflow-1590792-patched-play-1.3.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\commons-javaflow-1590792-patched-play-1.3.0.jar
+file.reference.commons-jci-core-1.1.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\commons-jci-core-1.1.jar
+file.reference.commons-jci-fam-1.1.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\commons-jci-fam-1.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\commons-logging-1.2.jar
+file.reference.commons-math3-3.6.1.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\commons-math3-3.6.1.jar
+file.reference.curvesapi-1.08.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\curvesapi-1.08.jar
+file.reference.flatlaf-2.6.jar=C:\\Users\\Usuario\\Downloads\\flatlaf-2.6.jar
+file.reference.flatlaf-intellij-themes-2.6.jar=C:\\Users\\Usuario\\Downloads\\flatlaf-intellij-themes-2.6.jar
 file.reference.hsqldb.jar=../../../Downloads/Proyecto2/src/biblioteca/hsqldb.jar
+file.reference.jasperreports-6.20.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Jasper 6.20\\jasperreports-6.20.0.jar
+file.reference.jasperreports-annotation-processors-6.20.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Jasper 6.20\\jasperreports-annotation-processors-6.20.0.jar
+file.reference.jasperreports-castor-6.20.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Jasper 6.20\\jasperreports-castor-6.20.0.jar
+file.reference.jasperreports-chart-customizers-6.20.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Jasper 6.20\\jasperreports-chart-customizers-6.20.0.jar
+file.reference.jasperreports-chart-themes-6.20.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Jasper 6.20\\jasperreports-chart-themes-6.20.0.jar
+file.reference.jasperreports-custom-visualization-6.20.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Jasper 6.20\\jasperreports-custom-visualization-6.20.0.jar
+file.reference.jasperreports-fonts-6.20.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Jasper 6.20\\jasperreports-fonts-6.20.0.jar
+file.reference.jasperreports-functions-6.20.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Jasper 6.20\\jasperreports-functions-6.20.0.jar
+file.reference.jasperreports-javaflow-6.20.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Jasper 6.20\\jasperreports-javaflow-6.20.0.jar
+file.reference.jasperreports-metadata-6.20.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Jasper 6.20\\jasperreports-metadata-6.20.0.jar
+file.reference.jcommon-1.0.24.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\jcommon-1.0.24.jar
+file.reference.jfreechart-1.0.12.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\jfreechart-1.0.12.jar
 file.reference.jhall.jar=C:\\Users\\Usuario\\Downloads\\Proyecto2\\src\\biblioteca\\jhall.jar
+file.reference.log4j-api-2.21.1.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\log4j-api-2.21.1.jar
+file.reference.log4j-core-2.20.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\log4j-core-2.20.0.jar
+file.reference.poi-5.2.5.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\poi-5.2.5.jar
+file.reference.poi-ooxml-5.2.5.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\poi-ooxml-5.2.5.jar
+file.reference.poi-ooxml-lite-5.2.5.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\poi-ooxml-lite-5.2.5.jar
+file.reference.SparseBitSet-1.3.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\SparseBitSet-1.3.jar
+file.reference.spring-beans-6.0.4.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\spring-beans-6.0.4.jar
+file.reference.spring-core-6.0.4.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\spring-core-6.0.4.jar
+file.reference.spring-jcl-6.0.4.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\Dependencias_Jasper\\spring-jcl-6.0.4.jar
+file.reference.xmlbeans-5.2.0.jar=C:\\Users\\Usuario\\Downloads\\Bibliotecas informe\\poi\\xmlbeans-5.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.hsqldb.jar}:\
-    ${file.reference.jhall.jar}
+    ${file.reference.jhall.jar}:\
+    ${file.reference.flatlaf-2.6.jar}:\
+    ${file.reference.flatlaf-intellij-themes-2.6.jar}:\
+    ${file.reference.ant-1.7.1.jar}:\
+    ${file.reference.ant-launcher-1.7.1.jar}:\
+    ${file.reference.asm-5.0.2.jar}:\
+    ${file.reference.asm-analysis-5.0.2.jar}:\
+    ${file.reference.asm-commons-5.0.2.jar}:\
+    ${file.reference.asm-tree-5.0.2.jar}:\
+    ${file.reference.asm-util-5.0.2.jar}:\
+    ${file.reference.com.lowagie.text-2.1.7.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-io-2.15.1.jar}:\
+    ${file.reference.commons-javaflow-1590792-patched-play-1.3.0.jar}:\
+    ${file.reference.commons-jci-core-1.1.jar}:\
+    ${file.reference.commons-jci-fam-1.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.jcommon-1.0.24.jar}:\
+    ${file.reference.jfreechart-1.0.12.jar}:\
+    ${file.reference.log4j-core-2.20.0.jar}:\
+    ${file.reference.spring-beans-6.0.4.jar}:\
+    ${file.reference.spring-core-6.0.4.jar}:\
+    ${file.reference.spring-jcl-6.0.4.jar}:\
+    ${file.reference.jasperreports-annotation-processors-6.20.0.jar}:\
+    ${file.reference.jasperreports-6.20.0.jar}:\
+    ${file.reference.jasperreports-castor-6.20.0.jar}:\
+    ${file.reference.jasperreports-chart-customizers-6.20.0.jar}:\
+    ${file.reference.jasperreports-chart-themes-6.20.0.jar}:\
+    ${file.reference.jasperreports-custom-visualization-6.20.0.jar}:\
+    ${file.reference.jasperreports-fonts-6.20.0.jar}:\
+    ${file.reference.jasperreports-functions-6.20.0.jar}:\
+    ${file.reference.jasperreports-javaflow-6.20.0.jar}:\
+    ${file.reference.jasperreports-metadata-6.20.0.jar}:\
+    ${file.reference.SparseBitSet-1.3.jar}:\
+    ${file.reference.commons-codec-1.16.0.jar}:\
+    ${file.reference.commons-collections4-4.4.jar-1}:\
+    ${file.reference.commons-compress-1.25.0.jar}:\
+    ${file.reference.commons-io-2.15.0.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.curvesapi-1.08.jar}:\
+    ${file.reference.log4j-api-2.21.1.jar}:\
+    ${file.reference.poi-5.2.5.jar}:\
+    ${file.reference.poi-ooxml-5.2.5.jar}:\
+    ${file.reference.poi-ooxml-lite-5.2.5.jar}:\
+    ${file.reference.xmlbeans-5.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -50,8 +142,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=18
-javac.target=18
+javac.source=20
+javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -81,7 +173,7 @@ main.class=prueba.Prueba
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_21
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
