--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -142,8 +142,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=20
-javac.target=20
+javac.source=18
+javac.target=18
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -173,7 +173,7 @@ main.class=prueba.Prueba
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_18
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
