--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -133,7 +133,8 @@ javac.classpath=\
     ${file.reference.poi-5.2.5.jar}:\
     ${file.reference.poi-ooxml-5.2.5.jar}:\
     ${file.reference.poi-ooxml-lite-5.2.5.jar}:\
-    ${file.reference.xmlbeans-5.2.0.jar}
+    ${file.reference.xmlbeans-5.2.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
